syntax = "proto3";
option java_package = "com.cornellappdev.android.eatery";
option java_multiple_files = true;

message UserPreferences {
  bool hasOnboarded = 1;

  // Keeps track of when the user is first presented with the PermissionRequestDialog
  bool notificationFlowCompleted = 2;

  map<int32, bool> favorites = 3;

  bool isLoggedIn = 4;

  string username = 5;

  // Must be encrypted / decrypted.
  string password = 6;

  repeated int32 recentSearches = 7;

  bool analyticsDisabled = 8;

  //  repeated int32 recentSearches = 2;
  //  string username = 3;
  //  // Must be encrypted / decrypted.
  //  string password = 4;
  //
  //  //** START OF CACHED LOGIN DATA ******
  //
  //  // If the user was previously logged in, this field is true and
  //  // indicates cached data should be loaded.
  //  bool wasLoggedIn = 5;
  //  repeated AccountProto accounts = 6;
  //  repeated TransactionProto transactionHistory = 7;
  //
  //  //** END OF CACHED LOGIN DATA *********
  //
  //  NotificationSettings notificationSettings = 8;
  //  PermissionSettings permissionSettings = 9;
}

message AccountProto {
  int32 type = 1;
  double balance = 2;
}

message TransactionProto {
  string id = 1;
  double amount = 2;
  double resultingBalance = 3;
  Date date = 7;

  int32 transactionType = 4;
  int32 accountType = 5;
  string location = 6;
}

message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
  int32 hour = 4;
  int32 minute = 5;
}

message NotificationSettings {
  bool paused = 1;
  bool favoriteItems = 2;
  bool cornellAppDev = 3;
  bool cornellDining = 4;
  bool account = 5;
  bool analytics = 6;
  // False only on the first time opening the app--indicates default values should be set.
  bool hasSet = 7;
}

message PermissionSettings {
  bool locationAccess = 1;
}
